fix control bar z-index when an ad is loading

--- a/src/videojs.ima.css
+++ b/src/videojs.ima.css
@@ -177,7 +177,8 @@
   text-shadow: 0 0 1em #fff;
 }
 
-.video-js.vjs-ad-playing .vjs-control-bar {
+.video-js.vjs-ad-playing .vjs-control-bar,
+.video-js.vjs-ad-loading .vjs-control-bar {
   z-index: 1112;
 }
 
